--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/sb_002
 spring.datasource.username=postgres
-spring.datasource.password=@dmin123
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.datasource.password=rania
+server.port=8081
+spring.main.web-application-type=none
